added methods for user

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Quiz Game</title>
+    <title>Gacha Crystals</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
